# news_reporter_crew

./: .gitignore  README.md  pyproject.toml
src/new_report_crew/: crew.py  main.py
src/new_report_crew/config/: agents.yaml  tasks.yaml
