[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news-reporter"
version = "0.1.0"
description = "AI-powered global news reporter using CrewAI"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "crewai",
  "python-dotenv",
  "requests"
]

[tool.setuptools.packages.find]
where = ["."]
